Clean slate for thesis. Will use TU/e template

--- a/THESIS/thesis.tex
+++ b/THESIS/thesis.tex
@@ -1,13 +1,8 @@
 \documentclass[a4paper,12pt]{report}
 \title{Radial Electric Field-Generating Terms in L-H Transitions}
-\author{{\Large Kevin A. Blondino} \\
-	Supervisor: dr. H.J. de Blank \\
-	\texttt{k.blondino@student.tue.nl}}
-
-\date{February 2018}
-
-\input{uhead.sty}
-\input{tue_thesis.sty}
+\author{{\Large Kevin A. Blondino} \\\\
+	\texttt{k.blondino@student.tue.nl} \\\\
+	Supervisor: dr. H.J. de Blank}
 
 \usepackage{fullpage, indentfirst, graphicx}
 \usepackage[UKenglish]{isodate}
@@ -20,13 +15,15 @@
 \addbibresource{../References/References.bib}
 %}}}
 
-% Temporary
+% Temporary Packages
 \usepackage{lipsum, xcolor}
 
 % ---------------------------------------------------------
 
 \begin{document}
 \maketitle
+
+FILL
 
 \end{document}
 
