Compiling correctly. Has no content.

--- a/THESIS/thesis.sty
+++ b/THESIS/thesis.sty
@@ -35,8 +35,7 @@
 %urlcolor=darkred,
 %citecolor=darkblue }
 
-\usepackage[pagebackref=true,
-            colorlinks=true,
+\usepackage[colorlinks=true,
             linkcolor=gray,
             bookmarks=true,
             filecolor=gray,
@@ -63,7 +62,7 @@
 \lstset{
 % From http://en.wikibooks.org/wiki/LaTeX/Packages/Listings
 % Added settings using http://ftp.snt.utwente.nl/pub/software/tex/macros/latex/contrib/listings/listings.pdf
-language=XML,                    % choose the language of the code
+language=python,                    % choose the language of the code
 basicstyle=\footnotesize,        % the size of the fonts that are used for the code
 %numbers=left,                    % where to put the line-numbers
 %numberstyle=\footnotesize,       % the size of the fonts that are used for the line-numbers
@@ -151,3 +150,4 @@ stringstyle=\color[rgb]{0.627,0.126,0.941},  %
 %\tick and \cross
 \newcommand{\tick}{\textcolor{darkgreen}{\ding{51}}}
 \newcommand{\cross}{\textcolor{darkred}{\ding{55}}}
+
