Working on intro

--- a/THESIS/thesis.tex
+++ b/THESIS/thesis.tex
@@ -21,6 +21,7 @@
 \author{\me}
 
 \usepackage{fullpage, indentfirst, graphicx, amsmath}
+\usepackage[labelfont=bf]{caption}
 \usepackage[UKenglish]{isodate}
 \cleanlookdateon
 \usepackage[T1]{fontenc}
@@ -67,7 +68,6 @@
 \setcounter{page}{0}
 \pagenumbering{arabic}
 \input{Introduction/Introduction.tex}
-A TEST!\cite{snipes_h_1996}
 
 
 \clearemptydoublepage
