--- a/THESIS/thesis.tex
+++ b/THESIS/thesis.tex
@@ -9,13 +9,13 @@
 \newcommand{\docsubtitle}{Master's Thesis}
 
 \newcommand{\me}{Kevin A. Blondino}
-\newcommand{\keywords}{H-mode, bifurcation, L-mode}
+\newcommand{\keywords}{H-mode, bifurcation, L-mode, thesis, fusion, tokamak}
 \newcommand{\version}{EMPTY version}
 \newcommand{\monthYear}{February 2018}
 
 \newcommand{\firstCommitteeMember}{dr. H.J. de Blank}
-\newcommand{\secondCommitteeMember}{Your second Committee Member, usually the daily supervisor}
-\newcommand{\thirdCommitteeMember}{Your Third Committee Member, usually the external member}
+\newcommand{\secondCommitteeMember}{Second Committee Member}
+\newcommand{\thirdCommitteeMember}{Third Committee Member}
 %}}}
 
 %{{{ Two Figures Side-by-Side
@@ -27,11 +27,11 @@
 		\setlength\IHeight{\ht\IBoxB}%
 	\else\setlength\IHeight{\ht\IBoxA}\fi
 	\begin{figure}[tb]
-		\minipage[t]{0.49\textwidth}\centering
+		\minipage[t]{0.48\textwidth}\centering
 			\includegraphics[height=\IHeight]{#1}
 			\caption{#2}\label{#3}
 		\endminipage\hfill\vrule\hfill
-		\minipage[t]{0.49\textwidth}\centering
+		\minipage[t]{0.48\textwidth}\centering
 			\includegraphics[height=\IHeight]{#4}
 			\caption{#5}\label{#6}
 		\endminipage
