Added FiPy reference

--- a/References/References.bib
+++ b/References/References.bib
@@ -273,7 +273,7 @@ the model.},
 	number = {1},
 	urldate = {2017-05-18},
 	journal = {Plasma Physics and Controlled Fusion},
-	author = {Connor, J. W. and Wilson, H. R.},
+	author = {Connor, J.W. and Wilson, H.R.},
 	year = {2000},
 	pages = {R1}
 }
@@ -548,5 +548,18 @@ the model.},
 	publisher = {Springer},
 	doi = {10.1007/978-3-642-23099-8},
 	isbn = {978-3-642-23098-1}
+}
+
+@article{FiPy_2009,
+	author = {Guyer, J.E. and Wheeler, D. and Warren, J.A.},
+	title = {{FiPy}: Partial Differential Equations with {P}ython},
+	publisher = {IEEE},
+	year = 2009,
+	journal = {Computing in Science \& Engineering},
+	volume = 11,
+	number = 3,
+	pages = {6-15},
+	url = {http://www.ctcms.nist.gov/fipy},
+	doi = {10.1109/MCSE.2009.52},
 }
 
