--- a/My_Notes/Full_Model_Notes.tex
+++ b/My_Notes/Full_Model_Notes.tex
@@ -1,10 +1,10 @@
 \PassOptionsToPackage{unicode=true}{hyperref} % options for packages loaded elsewhere
 \PassOptionsToPackage{hyphens}{url}
 %
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper,8pt]{article}
 \usepackage{fullpage}
 \usepackage[nodisplayskipstretch]{setspace}
-\setstretch{0.3}
+\setstretch{-0.2}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
@@ -12,9 +12,12 @@
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
-  \usepackage{textcomp} % provides euro and other symbols
 \else % if luatex or xelatex
-  \usepackage{unicode-math}
+  \ifxetex
+    \usepackage{mathspec}
+  \else
+    \usepackage{fontspec}
+  \fi
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
@@ -24,17 +27,18 @@
 \usepackage[]{microtype}
 \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
+\PassOptionsToPackage{hyphens}{url} % url is loaded by hyperref
+\usepackage[unicode=true]{hyperref}
+\hypersetup{
+            pdfborder={0 0 0},
+            breaklinks=true}
+\urlstyle{same}  % don't use monospace font for urls
 \IfFileExists{parskip.sty}{%
 \usepackage{parskip}
 }{% else
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 }
-\usepackage{hyperref}
-\hypersetup{
-            pdfborder={0 0 0},
-            breaklinks=true}
-\urlstyle{same}  % don't use monospace font for urls
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
@@ -59,20 +63,19 @@
 
 \begin{document}
 
-\hypertarget{full-model-notes}{%
-\section{Full Model Notes}\label{full-model-notes}}
+\section{Full Model Notes}\label{full-model-notes}
 
-The full model acts on the domain of \begin{align}
+The full model acts on the domain of
+
+\begin{align}
     \Omega \,=\, \left\{x, t \,\in\, \mathbb{R}^2 \,|\, (0 \leq x \leq L) ~\text{and}~ (t \geq 0)\right\}.
 \end{align}
 
-The model can be reduced down to the following form: \begin{align}
-    \dfrac{\partial}{\partial t} \mathbf{v}(x,t) \,=\, \dfrac{\partial}{\partial x} F\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,+\, S\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right).
-\end{align}
+The model can be reduced down to the following form:
 
-The vectors \(\mathbf{v}\), \(F\), and \(S\) represent the following:
 \begin{align}
-\mathbf{v} \,=\,\begin{bmatrix} n(x, t) \\ T(x, t) \\ Z(x, t) \end{bmatrix}~,~~~~
+    \dfrac{\partial}{\partial t} \mathbf{v}&(x,t) \,=\, \dfrac{\partial}{\partial x} F\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,+\, S\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \\
+\mathbf{v}& \,=\,\begin{bmatrix} n(x, t) \\ T(x, t) \\ Z(x, t) \end{bmatrix}~,~~~~
 \mathbf{F} \,=\, \begin{bmatrix}
             D\,\cdot n^\prime \\[1ex]
             \dfrac{D}{\zeta}\,\cdot T^\prime \\[2ex]
@@ -82,32 +85,39 @@ The vectors \(\mathbf{v}\), \(F\), and \(S\) represent the following:
             0 \\[1ex]
             \left(\dfrac{\zeta + 1}{\zeta}\right) \dfrac{D}{n} \cdot n^\prime \, T^\prime \\[2ex]
             \dfrac{c_n T}{\epsilon n^2} \cdot n^\prime \,+\, \dfrac{c_T}{\epsilon n} \cdot T^\prime \,+\, \dfrac{G(Z)}{\epsilon}
-            \end{bmatrix}.
+            \end{bmatrix}~.
 \end{align}
 
 The diffusivity function \(D(\mathcal{E})\) is given in a few forms:
+
 \begin{align}
     D(Z) \,&=\, \dfrac{D_\text{max} + D_\text{min}}{2} + \dfrac{(D_\text{max} - D_\text{min})\tanh(Z)}{2} ~~~~~~ &\text{Zohm} \\
     D(Z^\prime) \,&=\, D_\text{min} \,+\, \dfrac{D_\text{max} - D_\text{min}}{1 + \alpha_\text{sup}\cdot(Z^\prime)^2} ~~~~~~ &\text{Staps} \\
     D(Z, Z^\prime) \,&=\, D_\text{min} + \dfrac{D_\text{max} - D_\text{min}}{1 + a_1\,Z^2 + a_2\,Z \cdot Z^\prime + a_3\left(Z^\prime\right)^2} ~~~~~~ &\text{Flow-Shear}
 \end{align}
 
-\hypertarget{domain-boundary-boundary-conditions-and-initial-conditions}{%
-\subsubsection{Domain Boundary, Boundary Conditions, and Initial
-Conditions}\label{domain-boundary-boundary-conditions-and-initial-conditions}}
+\subsubsection{Domain Boundary, Initial Conditions, and Boundary
+Conditions}\label{domain-boundary-initial-conditions-and-boundary-conditions}
+
+Paquay's initial conditions for density and temperature, and Stap's
+initial condition for \(Z\):
 
 \begin{align}
-    \delta \Omega \,=\, \left\{x, t \,\in\, \Omega ~|~ x = 0 ~~\text{and}~~ x = L\right\}
+    n(x,0) \,&=\, -\dfrac{\Gamma_\infty \lambda_n}{D} \, \left(1 + \frac{x}{\lambda_n}\right)~, \\
+    T(x,0) \,&=\, q_\infty \, \dfrac{\gamma - 1}{\Gamma_\infty} \, \left[1 - \frac{\lambda_n}{\zeta \lambda_T + \lambda_n} \, \left(1 + \frac{x}{\lambda_n}\right)^{-\zeta}\right]~, \\
+    Z(x,0) \,&=\, Z_S\left[1 - \tanh\left(\dfrac{L\,x - L}{2}\right)\right] \,=\, Z_S\left[1 - \frac{\exp(L\,x - L) - 1}{\exp(L\,x - L) + 1}\right]~.
 \end{align}
 
-The Neumann and Robin boundary conditions can be expressed in the form
-of \begin{align}
-    p\left(x, t, \mathbf{v}\right) \,+\, F\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,=\, 0 ~~~ \text{for} ~~~ (x, t) \in \delta\Omega.
+\begin{align}
+    \text{Boundary:}~~~~\delta \Omega \,=\, \left\{x, t \,\in\, \Omega ~|~ x = 0 ~~\text{and}~~ x = L\right\}
 \end{align}
 
-The \(p\) term is expressed, with \(\Gamma_c\) and \(q_c(t)\) as
-actuation paramters: \begin{align}
-p(0, t) \,=\, -\begin{bmatrix}
+For Matlab, the Neumann and Robin boundary conditions can be expressed
+in the form of
+
+\begin{align}
+    &p\left(x, t, \mathbf{v}\right) \,+\, F\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,=\, 0 ~~~ \text{for} ~~~ (x, t) \in \delta\Omega \\
+&p(0, t) \,=\, -\begin{bmatrix}
                 D \cdot \dfrac{n}{\lambda_n}\\[2ex]
                 \dfrac{D}{\zeta} \cdot \dfrac{T}{\lambda_T} \\[2ex]
                 \dfrac{\mu D}{\epsilon} \cdot \dfrac{Z}{\lambda_Z}
@@ -117,19 +127,35 @@ p(L, t) \,=\, \begin{bmatrix}
                 \Gamma_c(t) \\[1ex]
                 \dfrac{(\gamma - 1) q_c - T\Gamma_c(t)}{n} \\[2ex]
                 0
-                \end{bmatrix}_{x = L}.
+                \end{bmatrix}_{x=L}~.
 \end{align}
 
-Paquay's initial conditions for density and temperature, and Stap's
-initial condition for \(Z\): \begin{align}
-    n(x,0) \,&=\, -\dfrac{\Gamma_\infty \lambda_n}{D} \, \left(1 + \frac{x}{\lambda_n}\right), \\
-    T(x,0) \,&=\, q_\infty \, \dfrac{\gamma - 1}{\Gamma_\infty} \, \left[1 - \frac{\lambda_n}{\zeta \lambda_T + \lambda_n} \, \left(1 + \frac{x}{\lambda_n}\right)^{-\zeta}\right], \\
-    Z(x,0) \,&=\, Z_S\left[1 - \tanh\left(\dfrac{L\,x - L}{2}\right)\right] \,=\, Z_S\left[1 - \frac{\exp(L\,x - L) - 1}{\exp(L\,x - L) + 1}\right].
+Generalized versions for boundary conditions at the plasma edge
+(\(x=0\)):
+
+\begin{align}
+    \frac{\partial n}{\partial x} \,=\, \frac{n}{\lambda_n}~, ~~~~\frac{\partial T}{\partial x} \,=\, \frac{n}{\lambda_T}~, ~~~~\frac{\partial Z}{\partial x} \,=\, \frac{Z}{\lambda_Z}~,~~~~ \frac{\partial^2 Z}{\partial x^2} \,=\, 0
 \end{align}
 
-\hypertarget{expanded-model-for-all-plasma-variables}{%
+\ldots{}towards the core (\(x=L\)):
+
+\begin{align}
+    \frac{\partial n}{\partial x} \,=\, -\frac{\Gamma_c}{D}~, ~~~~ \frac{\partial T}{\partial x} \,=\ \frac{\zeta\left(T \Gamma_c - (\gamma - 1) q_c\right)}{n\,D}~, ~~~~\frac{\partial Z}{\partial x} \,=\, 0
+\end{align}
+
+\subsubsection{Steady-State Solutions}\label{steady-state-solutions}
+
+\small
+
+\begin{align}
+    &\bar{n}(x) \,=\, \bar{n}(0) - \int_0^x \frac{\Gamma_c}{D(\bar{Z}(x))}~\text{d}x, ~~ \bar{T}(x) \,=\, \frac{(\gamma - 1) q_c}{\Gamma_c} \left(1 - \lambda_g\left(\frac{\bar{n}(x)}{\bar{n}(0)}\right)^{-\zeta}\right), ~~ G(\bar{Z}(x)) \,=\, \theta\,D(\bar{Z}(x)) \\
+    &\bar{n}(0) \,=\, -\frac{\Gamma_c \lambda_n}{D(\bar{Z}(0))}, ~~ \lambda_g \,=\, \frac{\frac{\lambda_n}{\zeta \lambda_T}}{1 + \frac{\lambda_n}{\zeta \lambda_T}}, ~~ \theta \,=\, \frac{(\gamma - 1) q_c}{\Gamma_c^2 \lambda_n^2} (c_n + c_g), ~~ c_g \,=\, \frac{\zeta c_T - c_n}{1 + \zeta \frac{\lambda_T}{\lambda_n}}
+\end{align}
+
+\normalsize
+
 \subsection{Expanded Model for All Plasma
-Variables}\label{expanded-model-for-all-plasma-variables}}
+Variables}\label{expanded-model-for-all-plasma-variables}
 
 \begin{align}
     \dfrac{\partial n}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[D \cdot n^\prime\right] \,+\, 0 \\
@@ -137,9 +163,8 @@ Variables}\label{expanded-model-for-all-plasma-variables}}
     \epsilon \dfrac{\partial Z}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[\mu\,D \cdot Z^\prime\right] \,+\, \dfrac{c_n T}{n^2} \cdot n^\prime \,+\, \dfrac{c_T}{n} \cdot T^\prime \,+\, G(Z)
 \end{align}
 
-\hypertarget{alternate-z-model-with-substitutions}{%
 \subsection{\texorpdfstring{Alternate \(Z\) Model, with
-Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-with-substitutions}}
+Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-with-substitutions}
 
 \begin{align}
     &\dfrac{m_i}{e \rho_{pi}} \,n T\, \left(\dfrac{B_\theta}{B}\right)^2 \dfrac{\partial Z}{\partial t} \,=\, \dfrac{m_i \mu_i}{e \rho_{pi}} \,n T\, \dfrac{\partial^2 Z}{\partial x^2} \\
@@ -153,8 +178,7 @@ Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-w
 \end{itemize}
 
 \begin{align}
-    D^\text{an} \,&=\, \dfrac{\epsilon^2 \sqrt{\pi}}{2 a_m} \dfrac{\rho_{pe} T}{B} \\
-    g_n^\text{an} \,=\, -e \,n\, D^\text{an}~,~~~~~~~~~~ g_T^\text{an} \,&=\, -e \,n\, \alpha^\text{an}\, D^\text{an}~,~~~~~~~~~~ g_Z^\text{an} \,=\, \dfrac{-e \,n\, D^\text{an}}{\rho_{pi}}
+    D^\text{an} \,&=\, \dfrac{\epsilon^2 \sqrt{\pi}}{2 a_m} \dfrac{\rho_{pe} T}{B}~,~~~~ g_n^\text{an} \,=\, -e \,n\, D^\text{an}~,~~~~ g_T^\text{an} \,&=\, -e \,n\, \alpha^\text{an}\, D^\text{an}~,~~~~ g_Z^\text{an} \,=\, \dfrac{-e \,n\, D^\text{an}}{\rho_{pi}}
 \end{align}
 
 \begin{itemize}
@@ -164,17 +188,7 @@ Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-w
 \end{itemize}
 
 \begin{align}
-    g_n^\text{cx} \,=\, -\dfrac{m_i \,n_0 \langle\sigma v\rangle_\text{cx} \,n T}{B_\theta^2}~,~~~~~~~~~~ g_T^\text{cx} \,=\, \alpha^\text{cx}\,g_n^\text{cx}~,~~~~~~~~~~ g_Z^\text{cx} \,=\, -\dfrac{g_n^\text{cx}}{\rho_{pi}}
-\end{align}
-
-\begin{itemize}
-\tightlist
-\item
-  Ion Orbit Loss
-\end{itemize}
-
-\begin{align}
-    g^\text{OL} \,=\, e \,n\, \nu_\text{eff} \sqrt{\epsilon} \,\rho_{pi}~,~~~~~~~~~~ f^\text{OL} \,=\, \dfrac{g^\text{OL}\,\exp\left[-\sqrt{\nu_{*i} + Z^4}\right]}{\sqrt{\nu_{*i} + Z^4}}
+    g_n^\text{cx} \,=\, -\dfrac{m_i \,n_0 \langle\sigma v\rangle_\text{cx} \,n T}{B_\theta^2}~,~~~~ g_T^\text{cx} \,=\, \alpha^\text{cx}\,g_n^\text{cx}~,~~~~ g_Z^\text{cx} \,=\, -\dfrac{g_n^\text{cx}}{\rho_{pi}}
 \end{align}
 
 \begin{itemize}
@@ -185,18 +199,26 @@ Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-w
 
 \begin{align}
     \text{To consolidate:}&~~~ N \,=\, \dfrac{\nu_{*i}\,\epsilon^{3/2}\,\nu_{ei}}{\nu_{ii}} ~~~\text{and}~~~ \eta \,=\, \dfrac{\epsilon^2 \sqrt{\pi}}{8 a_m} m_i \,n\, (v_{T_i})^2 \\
-    \begin{pmatrix}\xi_\theta \\[1ex] \xi_\phi \end{pmatrix} \,&=\, \dfrac{1}{\pi} \int_0^{\sqrt{\nu_{*i}}} \begin{pmatrix} 1 \\ \frac{5}{2} - x \end{pmatrix} x^2 \exp(-x) \left[\int_{-1}^{+1} \dfrac{N / \sqrt{x} ~~ \text{d}y}{\left(y + Z / \sqrt{x}\right)^2 + \left(N / \sqrt{x}\right)^2}\right] \text{d}x \\
-    &=\, \dfrac{1}{\pi} \int_0^{\sqrt{\nu_{*i}}} \begin{pmatrix} 1 \\ \frac{5}{2} - x \end{pmatrix} x^2 \exp(-x) \, \tan^{-1}\left(\dfrac{2 N \sqrt{x}}{N^2 + Z^2 - x}\right) \text{d}x \\
-    g_n^{\pi\parallel} \,=\, \eta \, \rho_{\pi}& B_\theta \, \xi_\theta~,~~~~~~~~~~ g_n^{\pi\parallel} \,=\, \eta \, \rho_{pi} \left(B_\theta\,\xi_\theta - B\,\xi_\phi\right)~,~~~~~~~~~~ g_Z^{\pi\parallel} \,=\, 2\eta \, B_\theta \, \xi_\theta 
+    \begin{pmatrix}\xi_\theta \\[1ex] \xi_\phi \end{pmatrix} \,&=\, \dfrac{1}{\pi} \int_0^{\sqrt{\nu_{*i}}} \begin{pmatrix} 1 \\ \frac{5}{2} - x \end{pmatrix} x^2 \exp(-x) \, \tan^{-1}\left(\dfrac{2 N \sqrt{x}}{N^2 + Z^2 - x}\right) \text{d}x \\
+    g_n^{\pi\parallel} \,=\, \eta \, \rho_{\pi}& B_\theta \, \xi_\theta~,~~~~ g_n^{\pi\parallel} \,=\, \eta \, \rho_{pi} \left(B_\theta\,\xi_\theta - B\,\xi_\phi\right)~,~~~~ g_Z^{\pi\parallel} \,=\, 2\eta \, B_\theta \, \xi_\theta
+\end{align}
+
+\begin{itemize}
+\tightlist
+\item
+  Ion Orbit Loss:
+\end{itemize}
+
+\begin{align}
+    g^\text{OL} \,=\, e \,n\, \nu_\text{eff} \sqrt{\epsilon} \,\rho_{pi}~,~~~~ f^\text{OL} \,=\, \dfrac{g^\text{OL}\,\exp\left[-\sqrt{\nu_{*i} + Z^4}\right]}{\sqrt{\nu_{*i} + Z^4}}
 \end{align}
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
-\hypertarget{extra-information}{%
-\subsubsection{Extra Information}\label{extra-information}}
+\subsection{Extra Information}\label{extra-information}
 
 \begin{align}
-    n\,T \,=\, \left(\gamma - 1\right)U
+    n\,T \,=\, \left(\gamma - 1\right)U, ~~~~ \chi \,=\, \frac{D}{\zeta(\gamma - 1)}
 \end{align}
 
 \end{document}
