Large adjustment for flaw discovery in T-eq.

--- a/My_Notes/Full_Model_Notes.tex
+++ b/My_Notes/Full_Model_Notes.tex
@@ -12,12 +12,9 @@
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
+  \usepackage{textcomp} % provides euro and other symbols
 \else % if luatex or xelatex
-  \ifxetex
-    \usepackage{mathspec}
-  \else
-    \usepackage{fontspec}
-  \fi
+  \usepackage{unicode-math}
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
@@ -27,18 +24,17 @@
 \usepackage[]{microtype}
 \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-\PassOptionsToPackage{hyphens}{url} % url is loaded by hyperref
-\usepackage[unicode=true]{hyperref}
-\hypersetup{
-            pdfborder={0 0 0},
-            breaklinks=true}
-\urlstyle{same}  % don't use monospace font for urls
 \IfFileExists{parskip.sty}{%
 \usepackage{parskip}
 }{% else
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 }
+\usepackage{hyperref}
+\hypersetup{
+            pdfborder={0 0 0},
+            breaklinks=true}
+\urlstyle{same}  % don't use monospace font for urls
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
@@ -63,17 +59,34 @@
 
 \begin{document}
 
-\section{Full Model Notes}\label{full-model-notes}
+\hypertarget{full-model-notes}{%
+\section{Full Model Notes}\label{full-model-notes}}
 
-The full model acts on the domain of
-
-\begin{align}
-    \Omega \,=\, \left\{x, t \,\in\, \mathbb{R}^2 \,|\, (0 \leq x \leq L) ~\text{and}~ (t \geq 0)\right\}.
+Domain with boundary: \begin{align}
+    \Omega \,=\, \left\{x, t \,\in\, \mathbb{R}^2 \,|\, (0 \leq x \leq L) ~\text{and}~ (t \geq 0)\right\}, ~~~~ \delta\Omega \,=\, \{x, t \,\in\, \Omega | x = 0 ~\text{and}~ x = L \}
 \end{align}
 
-The model can be reduced down to the following form:
+Electric field normalization, energy definition, and diffusivity
+relation: \begin{align}
+    Z \,\equiv\, \frac{\rho_p \, e \, E_r}{T}~, ~~~~ U \,=\, \frac{n\,T}{\gamma - 1}, ~~~~ \chi \,=\, \frac{D}{\zeta(\gamma - 1)}
+\end{align}
 
-\begin{align}
+The following form of the model references particle and heat fluxes,
+\(\Gamma\) and \(q\): \begin{align}
+    \frac{\partial n}{\partial t} \,&=\, -\frac{\partial \Gamma}{\partial x}~, &\Gamma \,&=\, -D \, \frac{\partial n}{\partial x} \\
+    \frac{\partial U}{\partial t} \,&=\, -\frac{\partial q}{\partial x}~, &q \,&=\, -\chi \, n \frac{\partial T}{\partial x} + \frac{\Gamma\,T}{\gamma - 1} \\
+    \epsilon \frac{\partial Z}{\partial t} \,&=\, \mu \frac{\partial^2 Z}{\partial x^2} + \frac{c_n \, T}{n^2} \frac{\partial n}{\partial x} + \frac{c_T}{n} \frac{\partial T}{\partial x} + G(Z)~, &G \,&=\, a + b(Z - Z_S) + c(Z - Z_S)^3
+\end{align}
+
+Reducing it down to equations of only \(n\), \(T\), \(Z\), and numerical
+parameters gives \emph{(Verify \(T\) equation!)} \begin{align}
+    \dfrac{\partial n}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[D \cdot n^\prime\right] \\
+    \dfrac{\partial T}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[\dfrac{D}{\zeta} \cdot T^\prime\right] \,+\, \left(\dfrac{\zeta + 1}{\zeta}\right) \dfrac{D}{n} \cdot n^\prime \, T^\prime \,+\, \dfrac{D}{n} \, n^{\prime\prime} \, T \\
+    \epsilon \, \dfrac{\partial Z}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[\mu\,D \cdot Z^\prime\right] \,+\, \dfrac{c_n T}{n^2} \cdot n^\prime \,+\, \dfrac{c_T}{n} \cdot T^\prime \,+\, G(Z)
+\end{align}
+
+Staps reduced the model to the following vector form:
+\small\begin{align}
     \dfrac{\partial}{\partial t} \mathbf{v}&(x,t) \,=\, \dfrac{\partial}{\partial x} F\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,+\, S\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \\
 \mathbf{v}& \,=\,\begin{bmatrix} n(x, t) \\ T(x, t) \\ Z(x, t) \end{bmatrix}~,~~~~
 \mathbf{F} \,=\, \begin{bmatrix}
@@ -83,39 +96,40 @@ The model can be reduced down to the following form:
             \end{bmatrix}~,~~~~
 \mathbf{S} \,=\, \begin{bmatrix}
             0 \\[1ex]
-            \left(\dfrac{\zeta + 1}{\zeta}\right) \dfrac{D}{n} \cdot n^\prime \, T^\prime \\[2ex]
+            \left(\dfrac{\zeta + 1}{\zeta}\right) \dfrac{D}{n} \cdot n^\prime \, T^\prime +~\tiny{\text{MISSING TERM}}\\[2ex]
             \dfrac{c_n T}{\epsilon n^2} \cdot n^\prime \,+\, \dfrac{c_T}{\epsilon n} \cdot T^\prime \,+\, \dfrac{G(Z)}{\epsilon}
             \end{bmatrix}~.
-\end{align}
+\end{align}\normalsize
 
 The diffusivity function \(D(\mathcal{E})\) is given in a few forms:
-
 \begin{align}
     D(Z) \,&=\, \dfrac{D_\text{max} + D_\text{min}}{2} + \dfrac{(D_\text{max} - D_\text{min})\tanh(Z)}{2} ~~~~~~ &\text{Zohm} \\
     D(Z^\prime) \,&=\, D_\text{min} \,+\, \dfrac{D_\text{max} - D_\text{min}}{1 + \alpha_\text{sup}\cdot(Z^\prime)^2} ~~~~~~ &\text{Staps} \\
     D(Z, Z^\prime) \,&=\, D_\text{min} + \dfrac{D_\text{max} - D_\text{min}}{1 + a_1\,Z^2 + a_2\,Z \cdot Z^\prime + a_3\left(Z^\prime\right)^2} ~~~~~~ &\text{Flow-Shear}
 \end{align}
 
+\hypertarget{domain-boundary-initial-conditions-and-boundary-conditions}{%
 \subsubsection{Domain Boundary, Initial Conditions, and Boundary
-Conditions}\label{domain-boundary-initial-conditions-and-boundary-conditions}
+Conditions}\label{domain-boundary-initial-conditions-and-boundary-conditions}}
 
 Paquay's initial conditions for density and temperature, and Stap's
-initial condition for \(Z\):
-
-\begin{align}
+initial condition for \(Z\): \begin{align}
     n(x,0) \,&=\, -\dfrac{\Gamma_\infty \lambda_n}{D} \, \left(1 + \frac{x}{\lambda_n}\right)~, \\
     T(x,0) \,&=\, q_\infty \, \dfrac{\gamma - 1}{\Gamma_\infty} \, \left[1 - \frac{\lambda_n}{\zeta \lambda_T + \lambda_n} \, \left(1 + \frac{x}{\lambda_n}\right)^{-\zeta}\right]~, \\
     Z(x,0) \,&=\, Z_S\left[1 - \tanh\left(\dfrac{L\,x - L}{2}\right)\right] \,=\, Z_S\left[1 - \frac{\exp(L\,x - L) - 1}{\exp(L\,x - L) + 1}\right]~.
 \end{align}
 
-\begin{align}
-    \text{Boundary:}~~~~\delta \Omega \,=\, \left\{x, t \,\in\, \Omega ~|~ x = 0 ~~\text{and}~~ x = L\right\}
+Generalized versions for boundary conditions at the plasma edge
+(\(x=0\)): \begin{align}
+    \frac{\partial n}{\partial x} \,=\, \frac{n}{\lambda_n}~, ~~~~\frac{\partial T}{\partial x} \,=\, \frac{T}{\lambda_T}~, ~~~~\frac{\partial Z}{\partial x} \,=\, \frac{Z}{\lambda_Z}~,~~~~ \frac{\partial^2 Z}{\partial x^2} \,=\, 0
+\end{align}
+
+\ldots{}towards the core (\(x=L\)): \begin{align}
+    \frac{\partial n}{\partial x} \,=\, -\frac{\Gamma_c}{D}~, ~~~~ \frac{\partial T}{\partial x} \,=\ \frac{\zeta\left(T \Gamma_c - (\gamma - 1) q_c\right)}{n\,D}~, ~~~~\frac{\partial Z}{\partial x} \,=\, 0
 \end{align}
 
 For Matlab, the Neumann and Robin boundary conditions can be expressed
-in the form of
-
-\begin{align}
+in the form of \small\begin{align}
     &p\left(x, t, \mathbf{v}\right) \,+\, F\left(x, t, \mathbf{v}, \dfrac{\partial\mathbf{v}}{\partial x}\right) \,=\, 0 ~~~ \text{for} ~~~ (x, t) \in \delta\Omega \\
 &p(0, t) \,=\, -\begin{bmatrix}
                 D \cdot \dfrac{n}{\lambda_n}\\[2ex]
@@ -128,43 +142,20 @@ p(L, t) \,=\, \begin{bmatrix}
                 \dfrac{(\gamma - 1) q_c - T\Gamma_c(t)}{n} \\[2ex]
                 0
                 \end{bmatrix}_{x=L}~.
-\end{align}
+\end{align}\normalsize
 
-Generalized versions for boundary conditions at the plasma edge
-(\(x=0\)):
+\hypertarget{steady-state-solutions-verify-forms}{%
+\subsubsection{Steady-State Solutions (Verify
+forms)}\label{steady-state-solutions-verify-forms}}
 
-\begin{align}
-    \frac{\partial n}{\partial x} \,=\, \frac{n}{\lambda_n}~, ~~~~\frac{\partial T}{\partial x} \,=\, \frac{T}{\lambda_T}~, ~~~~\frac{\partial Z}{\partial x} \,=\, \frac{Z}{\lambda_Z}~,~~~~ \frac{\partial^2 Z}{\partial x^2} \,=\, 0
-\end{align}
-
-\ldots{}towards the core (\(x=L\)):
-
-\begin{align}
-    \frac{\partial n}{\partial x} \,=\, -\frac{\Gamma_c}{D}~, ~~~~ \frac{\partial T}{\partial x} \,=\ \frac{\zeta\left(T \Gamma_c - (\gamma - 1) q_c\right)}{n\,D}~, ~~~~\frac{\partial Z}{\partial x} \,=\, 0
-\end{align}
-
-\subsubsection{Steady-State Solutions}\label{steady-state-solutions}
-
-\small
-
-\begin{align}
+\small\begin{align}
     &\bar{n}(x) \,=\, \bar{n}(0) - \int_0^x \frac{\Gamma_c}{D(\bar{Z}(x))}~\text{d}x, ~~ \bar{T}(x) \,=\, \frac{(\gamma - 1) q_c}{\Gamma_c} \left(1 - \lambda_g\left(\frac{\bar{n}(x)}{\bar{n}(0)}\right)^{-\zeta}\right), ~~ G(\bar{Z}(x)) \,=\, \theta\,D(\bar{Z}(x)) \\
     &\bar{n}(0) \,=\, -\frac{\Gamma_c \lambda_n}{D(\bar{Z}(0))}, ~~ \lambda_g \,=\, \frac{\frac{\lambda_n}{\zeta \lambda_T}}{1 + \frac{\lambda_n}{\zeta \lambda_T}}, ~~ \theta \,=\, \frac{(\gamma - 1) q_c}{\Gamma_c^2 \lambda_n^2} (c_n + c_g), ~~ c_g \,=\, \frac{\zeta c_T - c_n}{1 + \zeta \frac{\lambda_T}{\lambda_n}}
-\end{align}
+\end{align}\normalsize
 
-\normalsize
-
-\subsection{Expanded Model for All Plasma
-Variables}\label{expanded-model-for-all-plasma-variables}
-
-\begin{align}
-    \dfrac{\partial n}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[D \cdot n^\prime\right] \,+\, 0 \\
-    \dfrac{\partial T}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[\dfrac{D}{\zeta} \cdot T^\prime\right] \,+\, \left(\dfrac{\zeta + 1}{\zeta}\right) \dfrac{D}{n} \cdot n^\prime \, T^\prime \\
-    \epsilon \dfrac{\partial Z}{\partial t} \,&=\, \dfrac{\partial}{\partial x}\left[\mu\,D \cdot Z^\prime\right] \,+\, \dfrac{c_n T}{n^2} \cdot n^\prime \,+\, \dfrac{c_T}{n} \cdot T^\prime \,+\, G(Z)
-\end{align}
-
-\subsection{\texorpdfstring{Alternate \(Z\) Model, with
-Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-with-substitutions}
+\hypertarget{gradient-z-model-with-substitutions}{%
+\subsubsection{\texorpdfstring{Gradient \(Z\) Model, with
+Substitutions}{Gradient Z Model, with Substitutions}}\label{gradient-z-model-with-substitutions}}
 
 \begin{align}
     &\dfrac{m_i}{e \rho_{pi}} \,n T\, \left(\dfrac{B_\theta}{B}\right)^2 \dfrac{\partial Z}{\partial t} \,=\, \dfrac{m_i \mu_i}{e \rho_{pi}} \,n T\, \dfrac{\partial^2 Z}{\partial x^2} \\
@@ -174,17 +165,17 @@ Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-w
 \begin{itemize}
 \tightlist
 \item
-  Electron Anomalous Diffusion
+  Electron Anomalous Diffusion:
 \end{itemize}
 
 \begin{align}
-    D^\text{an} \,&=\, \dfrac{\epsilon^2 \sqrt{\pi}}{2 a_m} \dfrac{\rho_{pe} T}{B}~,~~~~ g_n^\text{an} \,=\, -e \,n\, D^\text{an}~,~~~~ g_T^\text{an} \,&=\, -e \,n\, \alpha^\text{an}\, D^\text{an}~,~~~~ g_Z^\text{an} \,=\, \dfrac{-e \,n\, D^\text{an}}{\rho_{pi}}
+    D^\text{an} \,&=\, \dfrac{\epsilon^2 \sqrt{\pi}}{2 a_m} \dfrac{\rho_{pe} T}{B}~,~~ g_n^\text{an} \,=\, -e \,n\, D^\text{an}~,~~ g_T^\text{an} \,=\, -e \,n\, \alpha^\text{an}\, D^\text{an}~,~~ g_Z^\text{an} \,=\, \dfrac{-e \,n\, D^\text{an}}{\rho_{pi}}
 \end{align}
 
 \begin{itemize}
 \tightlist
 \item
-  Charge Exchange Friction
+  Charge Exchange Friction:
 \end{itemize}
 
 \begin{align}
@@ -194,7 +185,7 @@ Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-w
 \begin{itemize}
 \tightlist
 \item
-  Ion Bulk Viscosity
+  Ion Bulk Viscosity:
 \end{itemize}
 
 \begin{align}
@@ -206,19 +197,9 @@ Substitutions}{Alternate Z Model, with Substitutions}}\label{alternate-z-model-w
 \begin{itemize}
 \tightlist
 \item
-  Ion Orbit Loss:
-\end{itemize}
-
-\begin{align}
+  Ion Orbit Loss: \begin{align}
     g^\text{OL} \,=\, e \,n\, \nu_\text{eff} \sqrt{\epsilon} \,\rho_{pi}~,~~~~ f^\text{OL} \,=\, \dfrac{g^\text{OL}\,\exp\left[-\sqrt{\nu_{*i} + Z^4}\right]}{\sqrt{\nu_{*i} + Z^4}}
-\end{align}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\subsection{Extra Information}\label{extra-information}
-
-\begin{align}
-    n\,T \,=\, \left(\gamma - 1\right)U, ~~~~ \chi \,=\, \frac{D}{\zeta(\gamma - 1)}
-\end{align}
+  \end{align}
+\end{itemize}
 
 \end{document}
